# aarch64_kernel

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  Readme.md  linker.ld  linker.lds
.cargo/: config.toml
include/: constants.h
include/asm/: asmdefs.h  macro.h  macros.inc  memory.h  system.h
src/: exceptions.rs  gic.rs  irq_safe_mutex.rs  lib.rs  sync.rs  uart.rs  utilities.rs
src/asm/: boot.s  head.S  interrupt.s  vectors.S
src/drivers/: mod.rs
src/drivers/gic/: gicv3.rs  mod.rs
src/drivers/timer/: arch_timer.rs  mod.rs
src/drivers/uart/: mod.rs  pl011.rs
src/ipc/: irq_safe_mutex.rs  mod.rs
src/kernel/: device.rs  dtb.rs  interrupt.S  interrupts.rs  irq.rs  mod.rs
src/kernel/mm/: bits.rs  identity.rs  mair.rs  mod.rs  pgtable.rs
src/utilities/: convert.rs  io.rs  mmio.rs  mod.rs  print.rs
